--- a/css/index.css
+++ b/css/index.css
@@ -34,3 +34,13 @@
    display: flex;
    position: relative;
 }
+
+#signup_form {
+  width: 100%;
+}
+
+#signup_form input {
+  margin-bottom: 10px;
+  padding: 5px;
+  box-sizing: border-box;
+}
