--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,8 @@
     	width: 350px;
     	border-radius: 1px;
     	margin-bottom: 10px;
+      float: left;
+      
 
 	}
 
@@ -44,3 +46,4 @@
   padding: 5px;
   box-sizing: border-box;
 }
+
